Fix tools in builder